src/test/deca/context/valid/equals-sans-override.deca
// Description:
//    Utilisation de equals de la classe object sans override
//
// Resultats:
//
//
// Historique:
//    cree le 16/01/2023

class A {

}

{
    A a = new A();
    A b = new A();
    b.equals(a);
}
